.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
18:10:25 **** Incremental Build of configuration Debug for project NUC.G070_BOOTLOADER_USER_APP ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m0plus -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32G070xx -c -I../Core/Inc -I../Drivers/STM32G0xx_HAL_Driver/Inc -I../Drivers/STM32G0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32G0xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc "../Core/Src/stm32g0xx_hal_msp.c" -mcpu=cortex-m0plus -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32G070xx -c -I../Core/Inc -I../Drivers/STM32G0xx_HAL_Driver/Inc -I../Drivers/STM32G0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32G0xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/stm32g0xx_hal_msp.d" -MT"Core/Src/stm32g0xx_hal_msp.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/stm32g0xx_hal_msp.o"
arm-none-eabi-gcc "../Core/Src/stm32g0xx_it.c" -mcpu=cortex-m0plus -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32G070xx -c -I../Core/Inc -I../Drivers/STM32G0xx_HAL_Driver/Inc -I../Drivers/STM32G0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32G0xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/stm32g0xx_it.d" -MT"Core/Src/stm32g0xx_it.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/stm32g0xx_it.o"
arm-none-eabi-gcc -o "NUC.G070_BOOTLOADER_USER_APP.elf" @"objects.list"   -mcpu=cortex-m0plus -T"C:\Users\yakup\OneDrive\Belgeler\STM32CubeIDE\Workpsace_E2DAS\NUC.G070_BOOTLOADER_USER_APP\STM32G070RBTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="NUC.G070_BOOTLOADER_USER_APP.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: NUC.G070_BOOTLOADER_USER_APP.elf
 
arm-none-eabi-size   NUC.G070_BOOTLOADER_USER_APP.elf 
arm-none-eabi-objdump -h -S  NUC.G070_BOOTLOADER_USER_APP.elf  > "NUC.G070_BOOTLOADER_USER_APP.list"
arm-none-eabi-objcopy  -O binary  NUC.G070_BOOTLOADER_USER_APP.elf  "NUC.G070_BOOTLOADER_USER_APP.bin"
   text	   data	    bss	    dec	    hex	filename
  19092	     28	   2924	  22044	   561c	NUC.G070_BOOTLOADER_USER_APP.elf
Finished building: default.size.stdout
 
Finished building: NUC.G070_BOOTLOADER_USER_APP.bin
 
Finished building: NUC.G070_BOOTLOADER_USER_APP.list
 
18:13:32 **** Incremental Build of configuration Debug for project NUC.G070_BOOTLOADER_USER_APP ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m0plus -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32G070xx -c -I../Core/Inc -I../Drivers/STM32G0xx_HAL_Driver/Inc -I../Drivers/STM32G0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32G0xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:101:41: error: 'bootloader_rx_data' undeclared (first use in this function)
  101 |   HAL_UARTEx_ReceiveToIdle_DMA(&huart3, bootloader_rx_data, BL_RX_DATA_LENGTH);
      |                                         ^~~~~~~~~~~~~~~~~~
../Core/Src/main.c:101:41: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:101:61: error: 'BL_RX_DATA_LENGTH' undeclared (first use in this function)
  101 |   HAL_UARTEx_ReceiveToIdle_DMA(&huart3, bootloader_rx_data, BL_RX_DATA_LENGTH);
      |                                                             ^~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:40: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.
18:13:32 **** Incremental Build of configuration Debug for project NUC.G070_LORA_BOOTLOADER_EXAMPLE ****
make -j8 all 
arm-none-eabi-size   NUC.G070_LORA_BOOTLOADER_EXAMPLE.elf 
   text	   data	    bss	    dec	    hex	filename
  29040	      8	   3648	  32696	   7fb8	NUC.G070_LORA_BOOTLOADER_EXAMPLE.elf
Finished building: default.size.stdout
 
18:13:33 **** Incremental Build of configuration Debug for project NUC.L053_BOOTLOADER_USER_APP ****
make -j8 all 
arm-none-eabi-gcc -o "NUC.L053_BOOTLOADER_USER_APP.elf" @"objects.list"   -mcpu=cortex-m0plus -T"C:\Users\yakup\OneDrive\Belgeler\STM32CubeIDE\Workpsace_E2DAS\NUC.L053_BOOTLOADER_USER_APP\STM32L053R8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="NUC.L053_BOOTLOADER_USER_APP.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
C:/ST/STM32CubeIDE_1.13.0/STM32CubeIDE/plugins/com.st.stm32cube.ide.mcu.externaltools.gnu-tools-for-stm32.11.3.rel1.win32_1.1.0.202305231506/tools/bin/../lib/gcc/arm-none-eabi/11.3.1/../../../../arm-none-eabi/bin/ld.exe: ./Core/Src/ssd1306.o: in function `SSD1306_Init':
C:/Users/yakup/OneDrive/Belgeler/STM32CubeIDE/Workpsace_E2DAS/NUC.L053_BOOTLOADER_USER_APP/Debug/../Core/Src/ssd1306.c:228: undefined reference to `hi2c1'
C:/ST/STM32CubeIDE_1.13.0/STM32CubeIDE/plugins/com.st.stm32cube.ide.mcu.externaltools.gnu-tools-for-stm32.11.3.rel1.win32_1.1.0.202305231506/tools/bin/../lib/gcc/arm-none-eabi/11.3.1/../../../../arm-none-eabi/bin/ld.exe: ./Core/Src/ssd1306.o: in function `ssd1306_I2C_WriteMulti':
C:/Users/yakup/OneDrive/Belgeler/STM32CubeIDE/Workpsace_E2DAS/NUC.L053_BOOTLOADER_USER_APP/Debug/../Core/Src/ssd1306.c:649: undefined reference to `hi2c1'
C:/ST/STM32CubeIDE_1.13.0/STM32CubeIDE/plugins/com.st.stm32cube.ide.mcu.externaltools.gnu-tools-for-stm32.11.3.rel1.win32_1.1.0.202305231506/tools/bin/../lib/gcc/arm-none-eabi/11.3.1/../../../../arm-none-eabi/bin/ld.exe: ./Core/Src/ssd1306.o: in function `ssd1306_I2C_Write':
C:/Users/yakup/OneDrive/Belgeler/STM32CubeIDE/Workpsace_E2DAS/NUC.L053_BOOTLOADER_USER_APP/Debug/../Core/Src/ssd1306.c:657: undefined reference to `hi2c1'
collect2.exe: error: ld returned 1 exit status
make: *** [makefile:64: NUC.L053_BOOTLOADER_USER_APP.elf] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.
